First commit from Overleaf

--- a/p_viticola/outline.tex
+++ b/p_viticola/outline.tex
@@ -273,6 +273,8 @@ Four phenotypes \ref*{fig:phenotypes}
 
 \subsection{Unreliable human factor}
 
+\subsection{Result from experiment re-analysis}
+
 \section*{Discussion}
 
 % \clearpage
