--- a/p_viticola/outline.tex
+++ b/p_viticola/outline.tex
@@ -6,19 +6,13 @@
 \usepackage{float}
 \usepackage[utf8]{inputenc}
 \usepackage[backend=biber,style= authoryear]{biblatex}
-% \usepackage[backend=biber]{biblatex}
 \usepackage[english]{babel}
 \usepackage{csquotes}
-% \usepackage[linktoc=none]{hyperref}
-% \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{booktabs}
 
-% \usepackage{lipsum}
-% Use more than one optional parameter in a new commands
 \usepackage{xargs}
-% Coloured text etc.
 \usepackage[pdftex,dvipsnames,table]{xcolor}
 
 \graphicspath{{./resources/images}}
@@ -30,7 +24,7 @@
 \def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
 \let\endchangemargin=\endlist
 
-\title{ Outline for \textit{Powdery Mildew} article}
+\title{ Outline for \textit{downy Mildew} article}
 \date{22nd July 2023}
 \author{}
 
@@ -42,9 +36,18 @@
 	\begin{abstract}
 		\textbf{Goal(s):}
 		\begin{itemize}
-			\item Create method to use automatically phenotype the interaction between PV and Vitis
-			\item Validate the method by finding QTL in past experiments
-			\item Compare human vs machine annotation
+                \item Computer science
+                \begin{itemize}
+    			\item Create method to use automatically phenotype the interaction between PV and Vitis
+                    \item high throughput phenotyping
+    			\item Validate the method by finding QTL in  experiments
+    			\item Compare human vs machine annotation
+                \end{itemize}
+                \item Biology
+                \begin{itemize}
+                    \item plant breeding for mildew resistance
+                    \item need to identify resistance genes in species related to the Vitis genus and in study populations
+                \end{itemize}
 		\end{itemize}
 
 		\textbf{Research or Methodology:}
@@ -53,6 +56,7 @@
 		\end{itemize}
 
 		\textbf{Too many images}
+  
 	\end{abstract}
 \end{changemargin}
 
@@ -69,10 +73,10 @@
 	\end{center}
 \end{figure}
 
-\subsection{Powdery Mildew}
+\subsection{downy Mildew}
 
 \begin{itemize}
-	\item Description/taxonomy
+	\item Description/taxonomy \textbf{velazquez} 
 	\item Infection mode and organ targets
 	\item History~\parencite*{fontaineEuropeBridgeheadWorldwide2021} \textbf{?}
 	\item Consequences
@@ -91,19 +95,32 @@
 
 \begin{enumerate}
 	\item European grapevines are sensitive to American pathogens~\parencite*{fontaineEuropeBridgeheadWorldwide2021}
-	\item Classical breeders -> poor quality wine \textbf{?}
+	\item Classical breeders -> poor quality wine
 	\item Quality breeders after the 50s \textbf{needs citation} \textbf{?}
 	\item Introduce OIV and OIV 452-1
+        \begin{itemize}
+            \item OIV = Office Int...
+            \item OIV has full ontology
+            \item OIV 452-1 resistance to DM in leaf disks
+        \end{itemize}
 	\item Critique scale \parencite{possamaiPhenotypingQTLIdentification2022}
-	\item Rpv3-, Rpv10- and Rpv12 \textbf{needs citation}
+        \begin{itemize}
+            \item takes into account spor and necr -> needs training
+            \item plus allows comparison
+            \item nevertheless \parencite{possamaiPhenotypingQTLIdentification2022}
+        \end{itemize}
+	\item Rpv3.1, Rpv10- and Rpv12 ... \textbf{needs citation} \textbf{Which ones were found with manual annotations}
+        \begin{itemize}
+            \item  \parencite{possamaiPhenotypingQTLIdentification2022} list of QTLs and how they were found
+        \end{itemize}
 	\item Image processing tools \parencite{hernandezAssessmentDownyMildew2022}, \parencite{zendlerHighthroughputPhenotypingLeaf2021}
 \end{enumerate}
 
 \subsection{Novelty}
 
 \begin{itemize}
-	\item Current CV approaches only look at sporulation
-	\item Our approach looks at sporulation plus 3 types of necrosis
+	\item Current computer vision approaches only look at sporulation
+	\item Our approach looks at sporulation plus 3 types of necrosis \textbf{necrosis as important as sporulation?}
 	\item \textbf{TODO} \textbf{Goal}: Predict OIV 452-1 from images for binary variables
 	\item \textbf{TODO} Test on existing experiments
 \end{itemize}
@@ -112,7 +129,7 @@
 
 \subsection{Plants}
 
-\parencite{bellinResistancePlasmoparaViticola2009}
+\parencite{bellinResistancePlasmoparaViticola2009} \textbf{new version needed}
 
 \subsection{Infection}
 
@@ -122,8 +139,8 @@
 
 \begin{itemize}
 	\item Acquisitions since 2018
-	\item Multiple acquisition Methods != camera, lenses, lightning, framing, compression, post processing
-	\item Trays
+	\item Multiple acquisition Methods != camera, lenses, lightning, framing, compression, post processing -> needs additional work to exploit the data \textbf{Why not use simple approach?}
+	\item Plates
 \end{itemize}
 
 \subsection{Existing data overview}
@@ -131,7 +148,7 @@
 \begin{figure}
 	\begin{center}
 		\includegraphics[width=0.7\linewidth]{oiv_452-1_desc.png}
-		\caption{Additional variables}\label{fig:newvariables}
+		\caption{Additional variables}\label{fig:newvariables} \textbf{To be replaced by text}
 	\end{center}
 \end{figure}
 
@@ -146,7 +163,7 @@
 	\item Naive prediction
 	      \begin{itemize}
 		      \item LDA, random forrest
-		      \item fail~\ref{fig:predictionfail}
+		      \item fail~\ref{fig:predictionfail} means that additional variables are not able to predict OIV, but they still may have signal
 		      \item multiple OIV values per combination~\ref*{tab:oivconfusion}
 	      \end{itemize}
 \end{itemize}
@@ -157,6 +174,7 @@
 		\caption{Prediction fail}\label{fig:predictionfail}
 	\end{center}
 \end{figure}
+Fig: \ref{fig:predictionfail}
 
 \begin{table}[H]
 	\centering
@@ -171,7 +189,7 @@
 		1           & 5           & 1        & 9        & 9        & X     & X     & X     & X     &       \\
 		1           & 5           & 1        & 1        & 7        &       &       & X     & X     &       \\
 		1           & 1           & 1        & 3        & 1        &       &       & X     & X     &       \\
-		0           & 1           & 1        & 3        & 3        &       &       &       & X     & X     \\
+		0           & 1           & 1        & 3        & 3        &       &       &       & X \textbf{ERROR}     & X     \\
 		\bottomrule
 	\end{tabular}
 \end{table}
@@ -204,6 +222,9 @@
 
 \subsection{Binary prediction}
 Zooniverse \parencite{zooniverse}
+
+\textbf{Add set construction to methodo}
+
 \begin{itemize}
 	\item online annotation platform
 	\item Multiple annotations per disc
@@ -219,7 +240,7 @@ Zooniverse \parencite{zooniverse}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.2\linewidth}
 		\includegraphics[width=\linewidth]{Exp20DM01_inoc1_T6_P17_c_1.png}
-		\caption{Necrosis dots}\label{fig:necrosisdots}
+		\caption{Necrosis spots}\label{fig:necrosisspots}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.2\linewidth}
 		\includegraphics[width=\linewidth]{Exp20DM01_inoc2_T6_P47_c_4.png}
@@ -244,7 +265,7 @@ Four phenotypes~\ref*{fig:phenotypes}
 			Phenotype           & Count \\
 			\midrule
 			sporulation         & 757   \\
-			necrosis dots       & 247   \\
+			necrosis spots       & 247   \\
 			necrosis flecks     & 149   \\
 			necrosis senescence & 50    \\
 			\bottomrule
@@ -258,7 +279,7 @@ Four phenotypes~\ref*{fig:phenotypes}
 			{}                                    & Precision & Recall & F1 score & Support \\
 			\midrule
 			sporulation                           & 0.92      & 0.93   & 0.93     & 113     \\
-			necrosis dots                         & 0.82      & 0.38   & 0.52     & 37      \\
+			necrosis spots                         & 0.82      & 0.38   & 0.52     & 37      \\
 			\rowcolor{red!25} necrosis flecks     & 0.00      & 0.00   & 0.00     & 22      \\
 			\rowcolor{red!25} necrosis senescence & 0.00      & 0.00   & 0.00     & 8       \\
 			micro avg                             & 0.91      & 0.66   & 0.77     & 180     \\
@@ -279,7 +300,7 @@ Four phenotypes~\ref*{fig:phenotypes}
 			Phenotype           & Count \\
 			\midrule
 			sporulation         & 1188  \\
-			necrosis dots       & 578   \\
+			necrosis spots       & 578   \\
 			necrosis flecks     & 467   \\
 			necrosis senescence & 271   \\
 			\bottomrule
@@ -293,7 +314,7 @@ Four phenotypes~\ref*{fig:phenotypes}
 			{}                   & precision & recall & f1-score & support \\
 			\midrule
 			sporulation          & 0.9922    & 0.9078 & 0.9481   & 141     \\
-			necrosis\_dots       & 0.9388    & 0.8679 & 0.9020   & 106     \\
+			necrosis\_spots       & 0.9388    & 0.8679 & 0.9020   & 106     \\
 			necrosis\_stains     & 0.7313    & 0.7656 & 0.7481   & 64      \\
 			necrosis\_senescence & 0.6800    & 0.8947 & 0.7727   & 38      \\
 			micro avg            & 0.8808    & 0.8682 & 0.8745   & 349     \\
@@ -321,13 +342,49 @@ Four phenotypes~\ref*{fig:phenotypes}
 	\item round 3 -> experts only. Annotation by agreement
 \end{itemize}
 
-\begin{figure}
+\subsubsection{Model}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\linewidth]{2023_cdt_data_frac_evolution.png}
+	\caption*{Ablation tests}\label{fig:ablationtests}
+\end{figure}
+
+\begin{itemize}
+    \item pytorch + pytorch lightning
+    \item based on~\ref{dosovitskiyImageWorth16x162021}
+    \item training hyperparameters
+    \item training steps
+    \item ablation tests
+\end{itemize}
+
+\begin{table}[H]
+	\begin{minipage}{0.4\linewidth}
+		\centering
+		\caption{Classification report}\label{tab:imprpatches4phenotypes}
+		\begin{tabular}{rcccc}
+			\toprule
+			{}                  & Precision & Recall & F1 score & Support \\
+			\midrule
+			sporulation         & 0.96      & 0.94   & 0.95     & 156     \\
+			necrosis spots       & 0.86      & 0.82   & 0.84     & 90      \\
+			necrosis flecks     & 0.82      & 0.90   & 0.86     & 41      \\
+			necrosis senescence & 0.93      & 0.89   & 0.91     & 57      \\
+			micro avg           & 0.91      & 0.90   & 0.90     & 344     \\
+			macro avg           & 0.89      & 0.89   & 0.89     & 344     \\
+			weighted avg        & 0.91      & 0.90   & 0.90     & 344     \\
+			\bottomrule
+		\end{tabular}
+	\end{minipage}
+\end{table}
+
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\linewidth]{gc_hf_seg_sen_high.png}
 	\caption*{Grad-CAM validation}\label{fig:gradcamval}
 \end{figure}
 
-\subsubsection{OIV 452-1 prediction}
+\subsection{OIV 452-1 prediction}
 
 \begin{itemize}
 	\item Annotation of 1881 leaf discs with OIV 452-1
@@ -358,11 +415,24 @@ Four phenotypes~\ref*{fig:phenotypes}
 
 \section{Results}
 
-\subsection{Unreliable human factor}
+\subsection{Unreliable human factor \textbf{?}}
+
+\subsection{Binary prediction as an heuristic for scale prediction}
 
 \subsection{Result from experiment re-analysis}
 
 \section{Discussion}
+
+\section{Missing bibliography}
+
+\begin{itemize}
+    \item Velasquez-Camacho, L., Otero, M., Basile, B., Pijuan, J., Corrado, G. (2023). Current trends and perspectives on predictive models for mildew diseases in Vineyards. Microorganisms, 11, 73
+    \item Merdinoglu et al., 2018, Hogbregat et al., 2019, (A trouver dans Possamai et wiedemann\_merdinoglu, 2022)
+    \item Velasquez-Camacho et al., 2023
+\end{itemize}
+
+
+
 
 % \clearpage
 \printbibliography
